[tool.poetry]
name = "lab06-stelter1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
jupyterlab = "^4.5.4"
matplotlib = "^3.10.8"
pandas-stubs = "~=2.3.3"
plotly = "^6.5.2"
seaborn = "^0.13.2"
scipy = "^1.17.0"
scipy-stubs = "~=1.17.0"
pandas = "==2.3.3"
streamlit = "==1.54.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
